--- a/unmixing normally distributed data.ipynb
+++ b/unmixing normally distributed data.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:d8a6bd180fa790f1f09baa71f2e249353ac6725697aa09796d11bdab81684059"
+  "signature": "sha256:2f04a9888c322d8b4b47619e6bab98a742dfaa9e15cad3b6d30a8f69c0bd050c"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -352,6 +352,15 @@
      "metadata": {},
      "outputs": [],
      "prompt_number": 13
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "# PCA does the same thing\n",
+      "\n",
+      "More details to follow when I have a few minutes."
+     ]
     }
    ],
    "metadata": {}
